--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,14 @@
 			<version>3.141.5</version>
 		</dependency>
 
-		<dependency>
+		<!-- This dependency do not suport selenium-server version 3.141.5
+				can be used with version 4+
+			<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
 			<version>5.3.1</version>
-		</dependency>
+		</dependency>-->
+
 
 	</dependencies>
 
